--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
-            Your daily dose of health in 3 simple steps
+            Your daily dose of health in <span>3</span> simple steps
           </h2>
         </div>
 
@@ -202,7 +202,7 @@
         <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
-            Omnifood AI chooses from 5,000+ recipes
+            Omnifood AI chooses from <span>5,000+</span> recipes
           </h2>
         </div>
 
@@ -275,42 +275,15 @@
           <div class="diets">
             <h3 class="heading-tertiary">Works with any diet:</h3>
             <ul class="list">
-              <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Vegetarian</span>
-              </li>
-              <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Vegan</span>
-              </li>
-              <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Pescatarian</span>
-              </li>
-              <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Gluten-free</span>
-              </li>
-              <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Lactose-free</span>
-              </li>
-              <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Keto</span>
-              </li>
-              <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Paleo</span>
-              </li>
-              <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Low FODMAP</span>
-              </li>
-              <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Kid-friendly</span>
-              </li>
+              <li class="vegetarian">Vegetarian</li>
+              <li class="vegan">Vegan</li>
+              <li class="pescatarian">Pescatarian</li>
+              <li class="gluten-free">Gluten-free</li>
+              <li class="lactose-free">Lactose-free</li>
+              <li class="keto">Keto</li>
+              <li class="paleo">Paleo</li>
+              <li class="low-fodmap">Low FODMAP</li>
+              <li class="kid-friendly">Kid-friendly</li>
             </ul>
           </div>
         </div>
@@ -506,11 +479,14 @@
                 ><span>Delivery is free</span>
               </li>
               <li class="list-item">
-                <ion-icon class="list-icon" name="close-outline"></ion-icon>
+                <ion-icon
+                  class="list-icon-close"
+                  name="close-outline"
+                ></ion-icon>
               </li>
             </ul>
             <div class="plan-sign-up">
-              <a href="#" class="btn btn--full">Start eating well</a>
+              <a href="#cta" class="btn btn--full">Select Plan</a>
             </div>
           </div>
           <div class="pricing-plan pricing-plan--complete">
@@ -538,7 +514,7 @@
               </li>
             </ul>
             <div class="plan-sign-up">
-              <a href="#" class="btn btn--full">Start eating well</a>
+              <a href="#cta" class="btn btn--full">Select Plan</a>
             </div>
           </div>
         </div>
@@ -621,17 +597,17 @@
                 </div>
 
                 <div>
-                  <label for="select-where">Where did you hear about us?</label>
-                  <select id="select-where" name="select-where" required>
+                  <label for="select-what"
+                    >Which plan interests you the most?</label
+                  >
+                  <select id="select-what" name="select-what" required>
                     <option value="">Please choose one option</option>
-                    <option value="friends">Friends and family</option>
-                    <option value="instagram">Instagram ad</option>
-                    <option value="youtube">Youtube video</option>
-                    <option value="other">Other</option>
+                    <option value="starter">Starter</option>
+                    <option value="complete">Complete</option>
                   </select>
                 </div>
 
-                <button type="submit" class="btn btn--form">Sign up now</button>
+                <button type="submit" class="btn btn--form">Sign Up</button>
               </form>
             </div>
             <div
