--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="step-text-box">
             <p class="step-number">01</p>
             <h3 class="heading-tertiary">
-              Tell us what you like (and what not)
+              Tell us what you like (and what you don't)
             </h3>
             <p class="step-description">
               Never again waste time thinking about what to eat! Omnifood AI
@@ -348,6 +348,31 @@
                 time! Plus, everything is organic and vegan and without plastic.
               </blockquote>
               <p class="testimonial-name">&mdash; Hannah Smith</p>
+            </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                alt="Photo of customer Ethan Walker"
+                src="img/customers/customer-4.jpg"
+              />
+              <blockquote class="testimonial-text">
+                Omnifood is without a doubt worth the money spent! The delivery
+                has been very accurate, and the meals are delicious. No more
+                cooking for me!
+              </blockquote>
+              <p class="testimonial-name">&mdash; Ethan Walker</p>
+            </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                alt="Photo of customer Laura Moore"
+                src="img/customers/customer-6.jpg"
+              />
+              <blockquote class="testimonial-text">
+                Omnifood saves me so much time! Now that I don't have to cook my
+                own meals, I have more me time. I loved every recipe so far!
+              </blockquote>
+              <p class="testimonial-name">&mdash; Laura Moore</p>
             </figure>
           </div>
         </div>
